--- a/src/app.css
+++ b/src/app.css
@@ -70,3 +70,11 @@ pre {
 .demo-item:last-child {
 	margin-bottom: 0;
 }
+
+.h2 {
+	color: var(--color-primary-600-400);
+}
+
+.container {
+	@apply mx-auto my-0 max-w-[1200px] px-0 lg:px-8;
+}
